# chatsune

./: .env.example  .env.fullstack  .env.prod.example  .gitignore  BACKEND-DEBT.md  BACKGROUND-COMPLETIONS.md  BACKGROUND-JOBS-DEBT.md  CHAT-DEBT.md  CLAUDE.md  CNAME  COMPACT-AND-CONTINUE-FEATURE.md  DATAMODEL.md  DEBT-FIXED.md  DEBT-SUMMARY.md  DEBT.md  E2EE_PHASE_1_ANNOUNCEMENT.md  FOR_LATER.md  FRONTEND-DEBT.md  GATEWAY-SPEC.md  HOWTO-DEPLOY.md  INFERENCE-IMPLEMENTATION-STATE.md  INFERENCE-IMPLEMENTATION.md  INSIGHTS.md  MANUAL-TESTS-REFUSAL-AND-ARTEFACTS.md  MEMORY-SYSTEM.md  PITCH.md  PRIVACY-ANALYSIS.md  PROJECTS-FEATURE.md  PROVIDER-INTEGRATION-POLICY.md  PYODIDE.md  README.md  RESPONSIVE-DESIGN.md  STREAM-ABORT-FOLLOWUPS.md  TECHNICAL-DEBT-260427.md  TEST-FAILURES-TRIAGE.md  TODO.md  UX-DEBT.md  VOICE-MODE.md  docker-compose-fullstack.yml  docker-compose.prod.yml  (+5 more)
backend/: Dockerfile  _logging.py  _middleware.py  _retry.py  config.py  database.py  dependencies.py  main.py  pyproject.toml  token_counter.py
backend/jobs/: __init__.py  _consumer.py  _dedup.py  _disconnect_retry.py  _errors.py  _http.py  _inspect.py  _lock.py  _log.py  _models.py  _registry.py  _retry.py  _submit.py
backend/jobs/handlers/: _budget_helpers.py  _memory_consolidation.py  _memory_extraction.py  _title_generation.py
backend/llm_harness/: __init__.py  __main__.py  _output.py  _runner.py
backend/migrations/: m_2026_04_24_session_toggles.py
backend/modules/artefact/: __init__.py  _handlers.py  _models.py  _repository.py
backend/modules/bookmark/: __init__.py  _handlers.py  _models.py  _repository.py
backend/modules/chat/: __init__.py  _context.py  _emoji_extractor.py  _handlers.py  _handlers_ws.py  _inference.py  _models.py  _orchestrator.py  _prompt_assembler.py  _prompt_sanitiser.py  _repository.py  _soft_cot.py  _soft_cot_parser.py  _toggle_defaults.py  _token_counter.py  _vision_fallback.py
backend/modules/debug/: __init__.py  _collector.py  _handlers.py
backend/modules/embedding/: __init__.py  _handlers.py  _model.py  _query_cache.py  _queue.py
backend/modules/images/: __init__.py  _http.py  _models.py  _repository.py  _service.py  _thumbnails.py  _tool_executor.py
backend/modules/integrations/: __init__.py  _handlers.py  _models.py  _registry.py  _repository.py  _screen_effects_prompt.py  _voice_expression_tags.py
backend/modules/knowledge/: __init__.py  _cascade.py  _chunker.py  _export.py  _handlers.py  _import.py  _pti_index.py  _pti_invalidation.py  _pti_normalisation.py  _pti_orchestrator.py  _pti_service.py  _repository.py  _retrieval.py
backend/modules/llm/: __init__.py  _admin_handlers.py  _concurrency.py  _connections.py  _credentials.py  _curation.py  _handlers.py  _homelab_handlers.py  _homelab_semaphores.py  _homelab_tokens.py  _homelabs.py  _image_normaliser.py  _metadata.py  _migration_connections_refactor.py  _models.py  _ollama_model_ops.py  _provider_status.py  _pull_registry.py  _registry.py  _resolver.py  _semaphores.py  _token_estimate.py  _tracker.py  _user_config.py
backend/modules/memory/: __init__.py  _assembly.py  _consolidation.py  _extraction.py  _handlers.py  _models.py  _parser.py  _repository.py
backend/modules/metrics/: __init__.py  _definitions.py  _handlers.py
backend/modules/persona/: __init__.py  _avatar_store.py  _avatar_url.py  _cascade.py  _clone.py  _export.py  _handlers.py  _import.py  _migration_tts_provider_id.py  _models.py  _monogram.py  _repository.py
backend/modules/project/: __init__.py  _handlers.py  _models.py  _repository.py  _service.py
backend/modules/providers/: __init__.py  _handlers.py  _migration_v1.py  _models.py  _probe.py  _registry.py  _repository.py
backend/modules/safeguards/: __init__.py  _budget.py  _circuit_breaker.py  _config.py  _queue_cap.py  _rate_limiter.py
backend/modules/settings/: __init__.py  _handlers.py  _models.py  _repository.py
backend/modules/storage/: __init__.py  _blob_store.py  _handlers.py  (+4 more)
backend/tests/: conftest.py  test_retry.py
backend/ws/: event_bus.py  manager.py  router.py  sidecar_router.py
(+1285 files in other folders)
