[project]
name = "chatsune"
version = "0.1.0"
description = "Privacy-first, self-hosted, multi-user AI companion platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.1.0",
    "motor>=3.3.0",
    "pymongo>=4.6.0",
    "redis>=5.0.0",
    "cryptography>=41.0.0",
    "python-multipart>=0.0.6",
    "uvloop>=0.19.0",
    "passlib>=1.7.4",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "respx>=0.22.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]
