[project]
name = "chatsune"
version = "0.1.0"
description = "Privacy-first, self-hosted, multi-user AI companion platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "motor>=3.7",
    "pymongo>=4.9",
    "redis>=5.2",
    "regex>=2024.0.0",
    "pyjwt>=2.10",
    "bcrypt>=4.2",
    "email-validator>=2.2",
    "cryptography>=46.0.6",
    "tiktoken>=0.9",
    "pillow>=11.0",
    "structlog>=24.1",
    "python-multipart>=0.0.18",
    "httpx>=0.28",
    "huggingface-hub>=0.27",
    "numpy>=1.26",
    "onnxruntime>=1.20",
    "transformers>=4.47",
    "grapheme>=0.6",
    "prometheus-client>=0.21",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "fakeredis>=2.34",
    "respx>=0.22.0",
]
